--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -10,7 +10,7 @@
         android:id="@+id/top_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/bottom_layout"
+        android:layout_above="@+id/settings_bottom_layout"
         android:orientation="horizontal">
 
         <ScrollView
@@ -207,12 +207,14 @@
         android:layout_alignParentBottom="true"
         android:background="?attr/GMBackgroundColor"
         android:gravity="center"
+        android:layout_margin="15dp"
         android:orientation="horizontal">
 
         <Button
             android:id="@+id/settings_save_button"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:backgroundTint="?attr/GMHighlightColor"
             android:text="@string/settings_save_label" />
     </LinearLayout>
 
