--- a/app/src/main/res/drawable/side_nav_bar.xml
+++ b/app/src/main/res/drawable/side_nav_bar.xml
@@ -1,9 +1,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:angle="180"
-        android:centerColor="@color/first"
-        android:endColor="@color/first"
-        android:startColor="@color/second"
+        android:angle="135"
+        android:centerColor="?attr/GMNavigationSecondaryColor"
+        android:endColor="?attr/GMNavigationPrimaryColor"
+        android:startColor="?attr/GMNavigationSecondaryColor"
         android:type="linear" />
 </shape>
