--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,7 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Theme.GiuridiMath" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/first</item>
         <item name="colorPrimaryVariant">@color/first</item>
@@ -10,7 +11,9 @@
         <item name="colorSecondaryVariant">@color/second</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor">?attr/GMPanelBackgroundColor</item>
+
+
         <!-- Customize your theme here. -->
 
         <item name="GMPanelBackgroundColor">@color/first</item>
@@ -30,6 +33,8 @@
         <item name="GMHighlightColor">@color/fifth</item>
         <item name="GMBackgroundColor">@color/white</item>
         <item name="GMProgressBarColor">?attr/GMColorTertiary</item>
+        <item name="GMNavigationPrimaryColor">@color/first</item>
+        <item name="GMNavigationSecondaryColor">@color/second</item>
 
     </style>
 
@@ -41,7 +46,12 @@
         <item name="windowNoTitle">true</item>
     </style>
 
-    <style name="Theme.GiuridiMath.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+    <style name="Theme.GiuridiMath.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
+        <item name="colorPrimary">?attr/GMPanelBackgroundColor</item>
+        <item name="background">?attr/GMPanelBackgroundColor</item>
+        <item name="titleTextColor">?attr/GMPanelTextColor</item>
+    </style>
 
     <style name="Theme.GiuridiMath.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
 </resources>
