--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,7 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/nav_dayoff">
+    app:startDestination="@+id/nav_dailycalculator">
+
+    <fragment
+        android:id="@+id/nav_dailycalculator"
+        android:name="it.carmelolagamba.giuridimath.ui.dailycalculator.DailyCalculatorFragment"
+        android:label="@string/menu_dailycalculator_title"
+        tools:layout="@layout/fragment_daily_calculator" />
 
     <fragment
         android:id="@+id/nav_dayoff"
