--- a/app/src/main/res/layout/fragment_daily_calculator.xml
+++ b/app/src/main/res/layout/fragment_daily_calculator.xml
@@ -45,6 +45,7 @@
         </LinearLayout>
 
         <ScrollView
+            android:id="@+id/scroll_container"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
@@ -242,7 +243,6 @@
                     android:id="@+id/result_container"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="25dp"
                     android:orientation="horizontal"
                     android:padding="10dp"
                     android:weightSum="1">
